# Ashare_data

./: __init__.py  pyproject.toml  readme.md  stocks.py
.github/workflows/: ci.yml
Ashare_data/: __init__.py  client.py
fetchers/: __init__.py  daily.py
providers/: __init__.py  base.py  eastmoney.py  qq.py
scheduler/: __init__.py  daily_update.py  initializer.py
storage/: __init__.py  sqlite.py
tests/: test_client.py  test_stocks.py
utils/: __init__.py  config.py  logging.py  rate_limiter.py
