[project]
name = "Ashare_data"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "chao", email = "17284002+AEliu@users.noreply.github.com"},
]
dependencies = ["httpx>=0.28.1"]
requires-python = "==3.13.*"
readme = "readme.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
