[project]
name = "Ashare_data"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "chao", email = "17284002+AEliu@users.noreply.github.com"},
]
dependencies = ["httpx>=0.28.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
